--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "@vercel/analytics": "^1.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "appwrite": "^17.0.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
